Added minimal data wrangling

--- a/DSCI100_individual.ipynb
+++ b/DSCI100_individual.ipynb
@@ -18,10 +18,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "94bafd72-aee3-429f-b6c0-9dc1366be471",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.1.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.6     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.3.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.1.2\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.7     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.1.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.4.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.2.1     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.3.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.1.0     \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(tidymodels)\n",
@@ -60,8 +95,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f99edc6-f60d-48ed-b7b2-ba997b008209",
+   "metadata": {},
+   "source": [
+    "##  (2) Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "460f68a7-f3b9-404d-995c-04df8e79bb5d",
+   "metadata": {},
+   "source": [
+    "#### Can player experience level, gender, age, and the total playtime predict whether a player subscribes to the newsletter?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4335740b-c166-4ac6-a314-368c720dba1e",
+   "metadata": {},
+   "source": [
+    "In this project, the **response variable** is **subscribe**, which indicates whether a player has subscribed to the newsletter or not. The **explanatory variables** are **experience**, **played_hours**, **genders**, and **Age** because these variables represent player characteristics and activity levels that would affect player's decision to subscribe. Those irrevent colums such as **hashedEmail** and **name** will be removed. And...."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f28f7d7-339a-4d96-b92a-4b6b7966f178",
+   "metadata": {},
+   "source": [
+    "## (3) Exploratory Data Analysis and Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a992c27-5514-4f92-a37c-6f294a921547",
+   "metadata": {},
+   "source": [
+    "### Reading the dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "5c916f5b-1226-4c12-8f23-ad566556bd90",
    "metadata": {},
    "outputs": [
@@ -168,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "9a8643c0-4840-401f-8384-df9721da07cd",
    "metadata": {},
    "outputs": [
@@ -235,40 +310,54 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f99edc6-f60d-48ed-b7b2-ba997b008209",
+   "id": "c2d301d2-8697-48bd-8b6e-5829ac579651",
    "metadata": {},
    "source": [
-    "##  (2) Questions"
+    "### Data Wrangling"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "460f68a7-f3b9-404d-995c-04df8e79bb5d",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e03dff73-6a12-4cb2-9125-936755e4e159",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows: 194\n",
+      "Columns: 5\n",
+      "$ experience   \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Pro, Veteran, Veteran, Amateur, Regular, Amateur, Regular…\n",
+      "$ subscribe    \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m TRUE, TRUE, FALSE, TRUE, TRUE, TRUE, TRUE, FALSE, TRUE, T…\n",
+      "$ played_hours \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 30.3, 3.8, 0.0, 0.7, 0.1, 0.0, 0.0, 0.0, 0.1, 0.0, 1.6, 0…\n",
+      "$ gender       \u001b[3m\u001b[90m<fct>\u001b[39m\u001b[23m Male, Male, Male, Female, Male, Female, Female, Male, Mal…\n",
+      "$ Age          \u001b[3m\u001b[90m<dbl>\u001b[39m\u001b[23m 9, 17, 17, 21, 21, 17, 19, 21, 47, 22, 23, 17, 25, 22, 17…\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Can player experience level, gender, age, and the total playtime predict whether a player subscribes to the newsletter?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4335740b-c166-4ac6-a314-368c720dba1e",
-   "metadata": {},
-   "source": [
-    "In this project, the **response variable** is **subscribe**, which indicates whether a player has subscribed to the newsletter or not. The **explanatory variables** are **experience**, **genders**, **Age**, and **played_hours** because these variables represent player characteristics and activity levels that would affect player's decision to subscribe. Those irrevent colums such as **hashedEmail** and **name** will be removed. And...."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f28f7d7-339a-4d96-b92a-4b6b7966f178",
-   "metadata": {},
-   "source": [
-    "## (3) Exploratory Data Analysis and Visualization"
+    "# removing irrelevent columns\n",
+    "mc_players <- mc_players |>\n",
+    "    select(experience,\n",
+    "           subscribe,\n",
+    "           played_hours,\n",
+    "           gender,\n",
+    "           Age) |>\n",
+    "# removing rows with missing values\n",
+    "    filter(!is.na(Age)) |>\n",
+    "# converting categorical variables to factors\n",
+    "    mutate(experience = as.factor(experience),\n",
+    "           subscribe = as.factor(subscribe),\n",
+    "           gender = as.factor(gender))\n",
+    "\n",
+    "glimpse(mc_players)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e03dff73-6a12-4cb2-9125-936755e4e159",
+   "id": "6386a43a-aa5f-4a2c-9d35-6e3850f5b719",
    "metadata": {},
    "outputs": [],
    "source": []
