Added the mean value table

--- a/DSCI100_individual.ipynb
+++ b/DSCI100_individual.ipynb
@@ -77,7 +77,7 @@
    "id": "245f0c90-31b0-47e8-94e6-f433d8f5ef91",
    "metadata": {},
    "source": [
-    "This dataset contains **196 observations** and **7 variables**. Each row represents data from a single player with demographic and information when they play Mincraft.  The purpose of this dataset is to explore what player characteristics are more predictive of newsletter subscription."
+    "This dataset contains **196 observations** and **7 variables**. Each row represents data from a single player with demographic details and information when they play Mincraft.  The purpose of this dataset is to explore what player characteristics are more predictive of newsletter subscription."
    ]
   },
   {
@@ -85,13 +85,15 @@
    "id": "940bcdc4-d755-4cfb-b841-62d45fe6a82e",
    "metadata": {},
    "source": [
-    "1. **experience:** player's level of experience\n",
-    "2. **subscribe:** TRUE if the player subscribed to the newsletter; FALSE otherwise\n",
-    "3. **hashedEmail:** anonymized player's email address\n",
-    "4. **played_hours:** total hours each player has spent playing the game\n",
-    "5. **name:** name\n",
-    "6. **gender:** gender\n",
-    "7. **Age:** age"
+    "#### Variables\n",
+    "\n",
+    "1. **experience (categorical):** player's level of experience\n",
+    "2. **subscribe (categorial):** TRUE if the player subscribed to the newsletter; FALSE otherwise\n",
+    "3. **hashedEmail (character):** anonymized player's email address\n",
+    "4. **played_hours (numeric):** total hours each player has spent playing the game\n",
+    "5. **name (character):** name\n",
+    "6. **gender (categorical):** gender\n",
+    "7. **Age (numeric):** age"
    ]
   },
   {
@@ -107,7 +109,8 @@
    "id": "460f68a7-f3b9-404d-995c-04df8e79bb5d",
    "metadata": {},
    "source": [
-    "#### Can player experience level, gender, age, and the total playtime predict whether a player subscribes to the newsletter?"
+    "#### Broad question: What factors influence whether a player subscribe to the Minecraft newsletter?\n",
+    "#### Specific question: Can a player's experience level, time spent playing, gender, and age predict their likelyhood of subscribing to the Minecraft newsletter?"
    ]
   },
   {
@@ -115,7 +118,7 @@
    "id": "4335740b-c166-4ac6-a314-368c720dba1e",
    "metadata": {},
    "source": [
-    "In this project, the **response variable** is **subscribe**, which indicates whether a player has subscribed to the newsletter or not. The **explanatory variables** are **experience**, **played_hours**, **genders**, and **Age** because these variables represent player characteristics and activity levels that would affect player's decision to subscribe. Those irrevent colums such as **hashedEmail** and **name** will be removed. And...."
+    "In this project, the **response variable** is **subscribe**, which indicates whether a player has subscribed to the newsletter or not. The **explanatory variables** are **experience**, **played_hours**, **genders**, and **Age** because these variables represent player's characteristics and activity levels that would affect their decision to subscribe. Those irrevent columns such as **hashedEmail** and **name** will be removed. This dataset has behavioral information for each player, which makes it possible to examine subscription patterns across different player types and activity levels."
    ]
   },
   {
@@ -355,9 +358,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7e44a50d-356f-4f54-bf4b-71b60f285ca2",
+   "metadata": {},
+   "source": [
+    "### Mean Value Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6386a43a-aa5f-4a2c-9d35-6e3850f5b719",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 2</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>mean_played_hours</th><th scope=col>mean_age</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>5.904639</td><td>21.13918</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 2\n",
+       "\\begin{tabular}{ll}\n",
+       " mean\\_played\\_hours & mean\\_age\\\\\n",
+       " <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 5.904639 & 21.13918\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 2\n",
+       "\n",
+       "| mean_played_hours &lt;dbl&gt; | mean_age &lt;dbl&gt; |\n",
+       "|---|---|\n",
+       "| 5.904639 | 21.13918 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  mean_played_hours mean_age\n",
+       "1 5.904639          21.13918"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# mean value for quantitative variables (played_hours and Age)\n",
+    "\n",
+    "mean_table <- mc_players |>\n",
+    "    summarize(mean_played_hours = mean(played_hours, na.rm = TRUE),\n",
+    "              mean_age = mean(Age, na.rm = TRUE))\n",
+    "mean_table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6386a43a-aa5f-4a2c-9d35-6e3850f5b719",
+   "id": "a0f15bf7-0202-4039-a637-f62ccf6fe3bb",
    "metadata": {},
    "outputs": [],
    "source": []
