Added some details to (1)

--- a/DSCI100_individual.ipynb
+++ b/DSCI100_individual.ipynb
@@ -77,7 +77,9 @@
    "id": "245f0c90-31b0-47e8-94e6-f433d8f5ef91",
    "metadata": {},
    "source": [
-    "This dataset contains **196 observations** and **7 variables**. Each row represents data from a single player with demographic details and information when they play Mincraft.  The purpose of this dataset is to explore what player characteristics are more predictive of newsletter subscription."
+    "This dataset contains **196 observations** and **7 variables**. Each row represents data from a single player, including their personal details and information when they play Minecraft.  \n",
+    "The purpose of this dataset is to explore what player characteristics are more predictive of newsletter subscription. The data were collected by a research group in Computer Science at UBC, led by Frank Wood.  \n",
+    "They set up a Minecraft research server where people could join, play, and their personal characteristics and behaviors in the game were automatically recorded. "
    ]
   },
   {
@@ -87,13 +89,17 @@
    "source": [
     "#### Variables\n",
     "\n",
-    "1. **experience (categorical):** player's level of experience\n",
-    "2. **subscribe (categorial):** TRUE if the player subscribed to the newsletter; FALSE otherwise\n",
-    "3. **hashedEmail (character):** anonymized player's email address\n",
-    "4. **played_hours (numeric):** total hours each player has spent playing the game\n",
-    "5. **name (character):** name\n",
-    "6. **gender (categorical):** gender\n",
-    "7. **Age (numeric):** age"
+    "1. **experience (categorical):** player's level of experience. There are five categories: Beginner, Amateur, Regular, Veteran, and Pro.\n",
+    "Most players fall into the Amateur group.\n",
+    "3. **subscribe (categorical):** TRUE if the player subscribed to the newsletter; FALSE otherwise. There are 142 players who have subscribed to the newsletter, while 52 have not.\n",
+    "4. **hashedEmail (character):** anonymized player's email address\n",
+    "5. **played_hours (numerical):** total hours each player has spent playing the game. The average playtime across all players is about 5.90 hours.\n",
+    "6. **name (character):** name\n",
+    "7. **gender (categorical):** gender. This dataset has six gender identities, where the majority of players are male.  \n",
+    "8. **Age (numerical):** age. The average age of players is 21.14 years.\n",
+    "\n",
+    "**Limitations:**\n",
+    "Although there are a few missing values in the \"Age\" variable, this dataset looks relatively clean."
    ]
   },
   {
@@ -109,8 +115,8 @@
    "id": "460f68a7-f3b9-404d-995c-04df8e79bb5d",
    "metadata": {},
    "source": [
-    "#### Broad question: What factors influence whether a player subscribe to the Minecraft newsletter?\n",
-    "#### Specific question: Can a player's experience level, time spent playing, gender, and age predict their likelyhood of subscribing to the Minecraft newsletter?"
+    "**Broad question:** What factors influence whether a player subscribes to the Minecraft newsletter?  \n",
+    "**Specific question:** Can a player's experience level, time spent playing, gender, and age predict their likelihood of subscribing to the Minecraft newsletter?"
    ]
   },
   {
@@ -118,7 +124,7 @@
    "id": "4335740b-c166-4ac6-a314-368c720dba1e",
    "metadata": {},
    "source": [
-    "In this project, the **response variable** is **subscribe**, which indicates whether a player has subscribed to the newsletter or not. The **explanatory variables** are **experience**, **played_hours**, **genders**, and **Age** because these variables represent player's characteristics and activity levels that would affect their decision to subscribe. Those irrevent columns such as **hashedEmail** and **name** will be removed. This dataset has behavioral information for each player, which makes it possible to examine subscription patterns across different player types and activity levels."
+    "In this project, the **response variable** is **subscribe**, which indicates whether a player has subscribed to the newsletter or not. The **explanatory variables** are **experience**, **played_hours**, **genders**, and **Age** because these variables represent a player's characteristics and activity levels that would affect their decision to subscribe. Those irrelevant columns such as **hashedEmail** and **name** will be removed. This dataset has behavioral information for each player, which makes it possible to examine subscription patterns across different player types and activity levels."
    ]
   },
   {
@@ -367,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "6386a43a-aa5f-4a2c-9d35-6e3850f5b719",
    "metadata": {},
    "outputs": [
@@ -424,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0f15bf7-0202-4039-a637-f62ccf6fe3bb",
+   "id": "d643490e-1af7-48a9-bab2-7f2a61f6430f",
    "metadata": {},
    "outputs": [],
    "source": []
