Added a summary table for (1)

--- a/DSCI100_individual.ipynb
+++ b/DSCI100_individual.ipynb
@@ -84,20 +84,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "994519fc-269f-4563-a2a0-7140e8066d7d",
+   "metadata": {},
+   "source": [
+    "#### Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "940bcdc4-d755-4cfb-b841-62d45fe6a82e",
    "metadata": {},
    "source": [
-    "#### Variables\n",
-    "\n",
-    "1. **experience (categorical):** player's level of experience. There are five categories: Beginner, Amateur, Regular, Veteran, and Pro.\n",
-    "Most players fall into the Amateur group.\n",
-    "3. **subscribe (categorical):** TRUE if the player subscribed to the newsletter; FALSE otherwise. There are 142 players who have subscribed to the newsletter, while 52 have not.\n",
-    "4. **hashedEmail (character):** anonymized player's email address\n",
-    "5. **played_hours (numerical):** total hours each player has spent playing the game. The average playtime across all players is about 5.90 hours.\n",
-    "6. **name (character):** name\n",
-    "7. **gender (categorical):** gender. This dataset has six gender identities, where the majority of players are male.  \n",
-    "8. **Age (numerical):** age. The average age of players is 21.14 years.\n",
-    "\n",
+    "| Variable | Type | Description | Summary / Mean Value |\n",
+    "|----------|------|-------------|------------|\n",
+    "| **experience** | categorical | player's level of experience. | 5 levels: Beginner, Amateur, Regular, Veteran, and Pro. Most players fall into the Amateur group. |\n",
+    "| **subscribe** | categorical | TRUE if the player subscribed to the newsletter; FALSE otherwise. | TRUE: 142, FALSE: 52 |\n",
+    "| **hashedEmail** | character | anonymized player's email address. | NA |\n",
+    "| **played_hours** | numerical | total hours each player has spent playing the game. | mean: 5.90 (hours) |\n",
+    "| **name** | character | name | NA |\n",
+    "| **gender** | categorical | gender. | This dataset has six gender identities, where the majority of players are male. |\n",
+    "| **Age** | numerical | age. | mean: 21.14 (years) |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eed928ee-7cee-4a7f-ad18-9474a9c95cb6",
+   "metadata": {},
+   "source": [
     "**Limitations:**\n",
     "Although there are a few missing values in the \"Age\" variable, this dataset looks relatively clean."
    ]
